<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.foodplanner.presentation.home.view.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.foodplanner.presentation.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.foodplanner.presentation.favorites.view.FavoritesFragment"
        android:label="@string/nav_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/planFragment"
        android:name="com.example.foodplanner.presentation.plan.PlanFragment"
        android:label="@string/nav_plan"
        tools:layout="@layout/fragment_plan" />

</navigation>
